--- a/Pizzeria Statica/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Pizzeria Statica/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+<h1 class="text-center" style= "color: white; font-weight: 600; font-size: 45px;"><b>@ViewData["Title"]</b></h1>
+<div class="container-fluid m-auto d-flex flex-row justify-content-center gap-3">
+    <div class="col-md-4 p-3 mb-5" style="background-color: white;">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
@@ -48,7 +48,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2 p-3 mb-5" style="background-color: white;">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
