--- a/Pizzeria Statica/Views/Pizza/Update.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Update.cshtml
@@ -16,8 +16,8 @@
             </div>
 
             <div class="mb-3">
+                <p class="label">Categoria: </p>
                 <select asp-for="Pizza.categoriaId" rows="10" class="d-block w-100">
-                    <option value=""></option>
                     @foreach (Categoria categoria in Model.Categorie)
                     {
                         @if (Model.Pizza.categoriaId == categoria.Id)
