--- a/Pizzeria Statica/Views/Shared/_Header.cshtml
+++ b/Pizzeria Statica/Views/Shared/_Header.cshtml
@@ -6,7 +6,7 @@
             <h2>PIZZERIA PORTAMI VIA</h2>
         </div>
         <div class="link-nav">
-            <a class="link" href="#">Home</a>
+            <a class="link" href="@Url.Action("Index","Home")">Home</a>
             <a class="link" href="#">Chi siamo</a>
             <a class="link" href="#">Contatti</a>
             <a class="link" href="#">Dove siamo</a>
