--- a/Pizzeria Statica/Views/Home/Index.cshtml
+++ b/Pizzeria Statica/Views/Home/Index.cshtml
@@ -10,77 +10,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-  </head>
+    @* Style *@
+    <link rel="stylesheet" href="~/css/HomeIndexStyle.css" />
+</head>
   <body>
      
     @* MAIN *@
-    <main>
-        <div class="container text-center mt-4">
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza Marinara</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class ="card-text">5.00$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza Margerita</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class="card-text">6.00$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza 4 formaggi</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class="card-text">6.50$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
+    <main style="color: white;">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h1>LISTA DELLE PIZZE</h1>
+                    <div>
+                        <input id="js_search_box" type="text" class="form-control my-3" placeholder="Cerca per titolo...">
                     </div>
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza 4 stagioni</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class="card-text">7.00$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
+
+            <div id="loading-spinner" class="row">
+                <div class="col-12">
+
+                    <div class="spinner-border" role="status">                       
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza Diavola</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class="card-text">6.00$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Pizza Salamino piccante</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia velit id urna blandit, quis feugiat sapien commodo. In consequat diam ac orci efficitur tincidunt.</p>
-                            <p class="card-text">6.50$</p>
-                        </div>
-                        <img src="https://picsum.photos/150" class="card-img-top" alt="...">
-                    </div>
+                    <span>
+                        Caricamento....
+                    </span>
+
                 </div>
             </div>
+
+            <div id="alert-not-found" class="row d-none">
+                <div class="col-12">
+                    Nessuna pizza trovata
+                </div>
+            </div>
+
+            <div id="contenitore-lista" class="row d-none">
+
+            </div>
+
         </div>
     </main>
 
@@ -88,3 +56,67 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+
+@section Scripts {
+
+    <script type="text/javascript">
+
+        loadAllPizzas();
+
+        document.getElementById("js_search_box").addEventListener('keyup', searchPizza);
+
+        function searchPizza(){
+
+            let searchString = document.getElementById("js_search_box").value;
+
+            loadAllPizzas(searchString);
+        }
+
+        function loadAllPizzas(searchParam) {
+            axios.get('/api/PizzaApi/GetPizzasByName', {
+                params: {
+                    search: searchParam
+                }
+            }).then((res) => {
+
+                console.log(res);
+
+                let alertNotFound = document.getElementById("alert-not-found");
+                let loadingSpinner = document.getElementById("loading-spinner");
+                let lista = document.getElementById("contenitore-lista");
+
+                if (res.data.length == 0) {
+
+                    alertNotFound.classList.remove("d-none");
+                    loadingSpinner.classList.add("d-none");
+
+                }else{
+
+                    loadingSpinner.classList.add("d-none");
+                    lista.classList.remove("d-none");
+
+                    lista.innerHTML = "";
+
+                    res.data.forEach(pizza => {
+                        console.log(pizza);
+                        lista.innerHTML +=
+                        `
+                                <div class="col-12 col-md-4 p-2">
+                                   <div class="card h-100">
+                                     <img src="${pizza.foto}" class="card-img-top" alt="...">
+                                     <div class="card-body">
+                                       <h5 class="card-title"> ${pizza.nome} </h5>
+                                       <p class="card-text"> ${pizza.descrizione} </p>
+                                       <a href="#" class="btn btn-primary"> Go somewhere </a>
+                                     </div>
+                                  </div>
+                                </div>
+                        `
+                        
+                    });
+                }
+            })
+        }
+
+    </script>
+}
