--- a/Pizzeria Statica/Views/Pizza/Details.cshtml
+++ b/Pizzeria Statica/Views/Pizza/Details.cshtml
@@ -18,7 +18,7 @@
         <p style="margin-top: 10px; font-size: 18px; font-family: cursive;">@Model.Descrizione</p>
 
         <p style="margin-top: 10px; font-size: 18px; font-family: cursive;">
-            <strong>Categoria:</strong>
+            Categoria:
             @if (Model.Categoria != null)
             {
                 @Model.Categoria.Name
@@ -31,7 +31,7 @@
 
         <p style="margin-top: 10px; font-size: 18px; font-family: cursive;">
 
-            <strong>Ingredienti</strong>
+            Ingredienti
 
             @if (Model.Ingredienti != null && Model.Ingredienti.Count > 0)
             {
