--- a/Pizzeria Statica/Views/Shared/_LoginPartial.cshtml
+++ b/Pizzeria Statica/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav d-flex flex-row gap-2">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
